fix dropdown overflow on product page

--- a/admin-dev/themes/new-theme/scss/pages/_orders_view.scss
+++ b/admin-dev/themes/new-theme/scss/pages/_orders_view.scss
@@ -297,7 +297,6 @@
   #order-view-page {
     .table {
       display: block;
-      overflow-y: scroll;
     }
   }
 }
